force-app/main/default/objects/Assessment__c/fields/Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approval_Notes__c</fullName>
    <inlineHelpText>Enter notes for the record Creator, if the behavioural update is rejected</inlineHelpText>
    <label>Approval Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>