force-app/main/default/objects/Assessment__c/fields/Assessment_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Approval_Status__c</fullName>
    <label>Assessment Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>For Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>