force-app/main/default/objects/Assessment__c/fields/New_Behaviours__c.field-meta.xml
<CustomField>
    <fullName>New_Behaviours__c</fullName>
    <inlineHelpText>Choose the new updated behaviours</inlineHelpText>
    <label>New Behaviours</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anxious</fullName>
            </value>
            <value>
                <fullName>Bad Recall</fullName>
            </value>
            <value>
                <fullName>Good Recall</fullName>
            </value>
            <value>
                <fullName>Good with Children</fullName>
            </value>
            <value>
                <fullName>Good with other species</fullName>
            </value>
            <value>
                <fullName>Good with same species</fullName>
            </value>
            <value>
                <fullName>Lead Reactive</fullName>
            </value>
            <value>
                <fullName>Pulls on Lead</fullName>
            </value>
            <value>
                <fullName>Reactive</fullName>
            </value>
            <value>
                <fullName>Resource Guarding</fullName>
            </value>
            <value>
                <fullName>Separation Anxiety</fullName>
            </value>
            <value>
                <fullName>Aggressive</fullName>
            </value>
            <value>
                <fullName>Cannot be held</fullName>
            </value>
            <value>
                <fullName>Happy being handled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>