force-app/main/default/objects/Assessment__c/recordTypes/Behavioural.recordType-meta.xml
<RecordType>
    <fullName>Behavioural</fullName>
    <active>true</active>
    <description>Assessment used for Behavioural evaluations</description>
    <label>Behavioural</label>
</RecordType>