force-app/main/default/objects/Assessment__c/recordTypes/Medical.recordType-meta.xml
<RecordType>
    <fullName>Medical</fullName>
    <active>true</active>
    <description>Assessment used for Medical evaluations</description>
    <label>Medical</label>
</RecordType>